--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.5.0-rc.2"
-serde = "1.0.152"
-sqlx = {version="0.6.2", features=["postgres", "uuid", "runtime-tokio-rustls"]}
-uuid = "1.3.0"
+rocket = {version="0.5.0-rc.2", features=["uuid"]}
+rocket_db_pools = {version="0.1.0-rc.2", features = ["sqlx_postgres"]}
+
