--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.23"
 rocket = {version="0.5.0-rc.2", features=["uuid"]}
 rocket_db_pools = {version="0.1.0-rc.2", features = ["sqlx_postgres"]}
+sqlx = {version="0.6.2", features= ["postgres", "uuid", "runtime-tokio-rustls", "chrono"]}
+uuid = {version="1.3.0", features=["v4"]}
 
