--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,16 @@
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
-name = "rocket-test"
+name = "rocket_test"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "rocket_test"
+path = "src/main.rs"
+
+[lib]
+name = "rocket_test"
+path = "src/lib.rs"
 
 [dependencies]
 chrono = "0.4.23"
