--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,13 @@ name = "rocket_test"
 path = "src/lib.rs"
 
 [dependencies]
-chrono = "0.4.23"
-rocket = {version="0.5.0-rc.2", features=["uuid"]}
-rocket_db_pools = {version="0.1.0-rc.2", features = ["sqlx_postgres"]}
-sqlx = {version="0.6.2", features= ["postgres", "uuid", "runtime-tokio-rustls", "chrono"]}
-uuid = {version="1.3.0", features=["v4"]}
-
+ammonia = "3.1.2"
+argon2 = "0.3"
+chrono = "0.4"
+rand_core = {version = "0.6", features = ["std"]}
+regex = "1.5.4"
+rocket = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["uuid"]}
+rocket_db_pools = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["sqlx_postgres"]}
+sqlx = {version = "0.5", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"]}
+uuid = {version = "0.8.2", features = ["v4"]}
+zxcvbn = "2"
